PDFの書き出し機能を実装する #52

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -95,6 +95,9 @@
   show_data_dir(true/false):<br>
   <input type='text' name='show_data_dir' value='{{$show_data_dir | boolstr}}'><br>
   
+  use_pdf_out(true/false):<br>
+  <input type='text' name='use_pdf_out' value='{{$use_pdf_out | boolstr}}'><br>
+
   para_enabled_br(true/false):<br>
   <input type='text' name='para_enabled_br' value='{{$para_enabled_br | boolstr}}'><br>
   
