add attach function

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -97,6 +97,15 @@
   
   use_pdf_out(true/false):<br>
   <input type='text' name='use_pdf_out' value='{{$use_pdf_out | boolstr}}'><br>
+  
+  allow_upload(true/false):<br>
+  <input type='text' name='allow_upload' value='{{$allow_upload | boolstr}}'><br>
+  
+  allow_upload_ext:<br>
+  <input type='text' name='allow_upload_ext' value='{{$allow_upload_ext}}'><br>
+  
+  upload_max_file_size(bytes):<br>
+  <input type='text' name='upload_max_file_size' value='{{$upload_max_file_size}}'><br>
 
   para_enabled_br(true/false):<br>
   <input type='text' name='para_enabled_br' value='{{$para_enabled_br | boolstr}}'><br>
