fixed extension for action attach

--- a/kona3engine/template/attach.html
+++ b/kona3engine/template/attach.html
@@ -5,7 +5,7 @@
         <div class="error">{{ $msg }}</div>
         <h3>Attach file: {{ $dir }} </h3>
         <form action="{{ $action }}" method="POST" enctype="multipart/form-data" class="pure-form pure-form-stacked">
-            ファイル名:<input type="text" name="name" value="">
+            ファイル名(省略可):<input type="text" name="name" value="">
             <input type="file" name="file">
             <br>
             <input type="submit" value="Upload">
