--- a/kona3engine/template/attach.html
+++ b/kona3engine/template/attach.html
@@ -8,7 +8,7 @@
             ファイル名(省略可):<input type="text" name="name" value="">
             <input type="file" name="file">
             <br>
-            <input type="submit" value="Upload">
+            <input type="submit" value="{{'Upload'|lang}}">
             <input type="hidden" name="MAX_FILE_SIZE" value="{{ $max_file_size }}" />
         </form>
         <hr/>
