Markdownファイルの編集も正しく保存できるようにした。設定項目に def_text_extを追加。 #55

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -56,6 +56,9 @@
   allow_add_user:<br>
   <input type='text' name='allow_add_user' value='{{$allow_add_user | boolstr}}'><br>
   
+  Default text ext (txt/md):<br>
+  <input type='text' name='def_text_ext' value='{{$def_text_ext}}'><br>
+
   <h3>Header/Footer</h3>
   
   allpage_header(wiki text):<br>
