--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -31,8 +31,11 @@
       <div>
         <input type="text" id="edit_counter" class="info" readonly>
       </div>
+      <div class="desc">
+        <b>Tags</b> (tag1/tag2/tag3...): <input type="text" id="tags" class="info" style="width: 50%;" name="tags" value="{{ $tags }}">
+      </div>
     </form>
-    <br>
+    <hr>
     
     <div class="desc">
       <div>Shortcut:</div>
