--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -59,6 +59,9 @@
   Default text ext (txt/md):<br>
   <input type='text' name='def_text_ext' value='{{$def_text_ext}}'><br>
 
+  bbs_admin_password:<br>
+  <input type='text' name='bbs_admin_password' value='{{$bbs_admin_password}}'><br>
+
   <h3>Header/Footer</h3>
   
   allpage_header(wiki text):<br>
