自動ログイントークンの仕組み #66

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -82,4 +82,6 @@
 </div>
 <div style="clear:both;"></div>
 
+<script src="index.php?kona3_autologin.js&resource"></script>
+
 {{ include parts_footer.html }}
