--- a/kona3engine/template/login.html
+++ b/kona3engine/template/login.html
@@ -34,6 +34,6 @@
 <div style="clear:both;"></div>
 
 <script src="index.php?kona3_autologin.js&resource"></script>
-<script>kona3tryAutologin()</script>
+<script>kona3tryAutologin(true)</script>
 
 {{ include parts_footer.html }}
