update kona3.css and nako3doc plugin

--- a/skin/nako3/kona3.css
+++ b/skin/nako3/kona3.css
@@ -1,51 +1,21 @@
-/** kona3_layout */
-#kona3_layout_header {
-	background-color: #fff0f0;
-	border-bottom: 1px solid #e0e0e0;
-	text-align: left;
-}
-#kona3_layout_title {
-	margin: 0 auto;
-	max-width: 768px;
-}
-#kona3_layout_show {
-	font-size:1em;
-	line-height:1.4em;
-	margin:0 auto;
-	max-width:768px;
-}
+/**
+ * nako3 skin
+ */
 
 /** kona3_header */
-.kona3_header_pad {
-	padding: 8px;
-}
-
-#kona3_header_title {
-	font-size: 1.5em;
-}
 #kona3_header_title a {
 	text-decoration: none;
 	color: #503020;
 }
-#kona3_header_title .pagename {
-	font-size:0.8em;
-	font-weight:400;
+#kona3_layout_header {
+	background-color: #fff0f0;
+	font-size: 1em;
 }
 
 /** kona3_main */
-#kona3_main
-{
-	margin:8px;
-	padding:0;
-}
 #kona3_main h1
 {
-	background-color: #fff0ff;
-	border-bottom: solid 1px #ef9090;
-	font-size: 1.3em;
-	font-weight: bold;
-	margin: 20px 0 15px;
-	padding:10px 10px 10px 8px;
+	background-color: #fff0f0;
 }
 
 #kona3_main h2
@@ -54,144 +24,27 @@
 	border-bottom:solid 1px #e0c0c0;
 	background-color: #fffcfc;
 	color:#004;
-	font-size: 1.2em;
-	margin:1.5em 0;
-	padding: 0.5em;
 }
 
 #kona3_main h3
 {
 	border-bottom: dotted 1px silver;
-	font-size:1.1em;
-	margin:1.5em 0 1em;
-	padding:8px 0 2px 4px;
 }
 
 #kona3_main h4,#kona3_main h5
 {
 	border-bottom:solid 1px #F0F0F0;
-	font-size:16px;
-	font-weight:700;
-	margin:30px 0 15px;
-	padding:8px 0;
 }
 
 #kona3_main h6
 {
 	border-bottom:solid 1px #F0F0F0;
-	font-size:16px;
-	font-weight:700;
-	margin:30px 0 15px;
-	padding:8px 0 6px;
-}
-
-#kona3_main .buttons .hint,
-#kona3_main .note,
-#wikieditorbody .hint,.plugin_comment form label {
-	font-size:0.7em;
-}
-
-
-#conflict_copy_edit_btn
-{
-	width:300px;
-}
-
-#kona3_show_data_dir
-{
-	color:#9090ff;
-	font-size:9px;
-	padding-right:10px;
-	text-align:right;
-}
-
-#kona3_show_data_dir input
-{
-	background-color:#f9f9f9;
-	color:#9090ff;
-	padding:6px;
-	width:50%;
-}
-
-
-#kona3_main .conflictadd
-{
-	background-color:#F88;
-	color:#FFF;
-}
-
-#kona3_main .conflictsub
-{
-	background-color:#88F;
-	color:#FFF;
 }
 
 #kona3_main .contents .blognavi
 {
 	background-color:#FFFFC9;
 	color:#fc7819;
-	font-size:12px;
-	margin-bottom:0;
-	text-align:center;
-}
-
-
-#kona3_main .date
-{
-	color:#333;
-	font-size:0.7em;
-}
-
-#kona3_main .error
-{
-	color:red;
-	margin:8px;
-}
-
-#kona3_main .imagecaption
-{
-	background-color:#FFF;
-	font-size:11px;
-	text-align:center;
-	width:100%;
-}
-
-#kona3_main .message
-{
-	background-color:#fff0f0;
-	float:left;
-	left:0;
-	margin:16px;
-	padding:32px;
-	width:100%;
-}
-
-#kona3_main .new
-{
-	color:red;
-	font-size:0.7em;
-}
-
-#kona3_main .none
-{
-	background-color:#FFC;
-	color:#999;
-	padding:2px;
-}
-
-#kona3_main .resmark
-{
-	background-color:#f0f0ff;
-	color:#00f;
-	margin:4px 4px 16px 32px;
-	padding:4px;
-}
-
-#kona3_main .todo
-{
-	background-color:#F0FFF0;
-	color:#494;
-	padding:2px;
 }
 
 #kona3_main a:hover
@@ -213,279 +66,11 @@
 #kona3_main div.date
 {
 	color:#666;
-	font-size:12px;
 }
-
-#kona3_main div.edit
-{
-	font-size:10px;
-	padding:4px;
-	text-align:right;
-	width:100%;
-}
-
 
 #kona3_main img
 {
 	border:solid 1px gray;
-}
-
-#kona3_main ol
-{
-	margin:6px 0;
-	padding-left:12px;
-}
-
-#kona3_main ol li
-{
-	margin-left:16px;
-}
-
-#kona3_main p
-{
-	margin-bottom:20px;
-	margin-top:12px;
-}
-
-#kona3_main p.figureTitle
-{
-	font-size:12px;
-	font-weight:700;
-	margin:0;
-	padding:0;
-}
-
-#kona3_main table
-{
-	border-collapse:collapse;
-	border-left:1px solid #A0A0A0;
-	border-top:1px solid #A0A0A0;
-	margin:4px 0;
-}
-
-#kona3_main table table td
-{
-	background-color:#E6E6FA;
-	border:0;
-	color:#333;
-	padding:4px 8px 4px 0;
-	text-align:left;
-}
-
-#kona3_main table table th
-{
-	background-color:#E6E6FA;
-	border:0;
-	color:#333;
-	font-weight:700;
-	padding:4px 8px 4px 0;
-	text-align:left;
-}
-
-#kona3_main table td
-{
-	background-color:#eef;
-	border-bottom:1px solid #A0A0A0;
-	border-collapse:collapse;
-	border-right:1px solid #A0A0A0;
-	color:#333;
-	padding:6px 8px;
-}
-
-#kona3_main table td p,#kona3_main table th p,#wikifooter p
-{
-	margin:0;
-	padding:0;
-}
-
-#kona3_main table th
-{
-	background-color:#e0e0ff;
-	border-bottom:1px solid #A0A0A0;
-	border-collapse:collapse;
-	border-right:1px solid #A0A0A0;
-	color:#004;
-	font-weight:700;
-	padding:4px 8px;
-	text-align:left;
-}
-
-#kona3_main ul
-{
-	font-size:1em;
-	margin:6px 0;
-	padding-left:12px;
-}
-
-#kona3_main ul li
-{
-	margin-left:16px;
-	margin-right:16px;
-}
-
-/** kona3_menubar */
-#kona3_menubar
-{
-	height:100%;
-	border-left: 1px dotted #eee;
-}
-
-#kona3_menubar ul
-{
-	list-style:none;
-	margin:4px 8px 4px 16px;
-	padding:0;
-}
-
-#kona3_menubar ul li
-{
-	display: block;
-	padding: 0 0 0 0;
-	margin: 0 0 0 0;
-}
-
-#kona3_menubar ul li a
-{
-	display:block;
-}
-
-#kona3_menubar h1,
-#kona3_menubar h2,
-#kona3_menubar h3
-{
-	font-size:1em;
-	margin: 18px 0px 0px 0px;
-	padding: 8px;
-	border-bottom: dotted 1px silver;
-}
-
-#kona3_menubar .date {
-	font-size: 0.8em;
-	color: gray;
-}
-
-#wikimessage
-{
-	margin:0 auto;
-	max-width:760px;
-	text-align:left;
-}
-
-#wikimessage .bodypad
-{
-	background-color:#fcfcfc;
-	padding:16px;
-}
-
-#wikimessage .box
-{
-	background-color:#f0f0ff;
-	margin:1em;
-	padding:1.5em;
-}
-
-#wikimessage .box_border
-{
-	border: 1px solid silver;
-	padding: 8px;
-	margin: 8px;
-}
-
-#wikimessage .pad
-{
-	padding:1em;
-}
-
-#wikimessage h3
-{
-  border-bottom: 1px solid silver;
-  padding: 6px;
-}
-
-#wikimessage blockquote
-{
-	padding:32px;
-}
-
-#wikimessage h4
-{
-	background-color:#e0f0ff;
-	border-bottom:1px solid #ce0e0e0;
-	margin-bottom:12px;
-	padding:8px;
-}
-
-#wikimessage h5,h6
-{
-	border-bottom:1px solid #9090f0;
-	font-size:1.1em;
-	font-weight:700;
-	margin-bottom:12px;
-	margin-top:24px;
-	padding:4px;
-}
-
-#wikimessage input
-{
-	margin:4px 0 0;
-	padding:4px;
-}
-
-#wikimessage p
-{
-	padding:10px;
-}
-
-#wikimessage table
-{
-	margin:12px;
-}
-
-#wikimessage td
-{
-	margin:0;
-	padding:8px;
-}
-
-#wikimessage ul
-{
-	margin:8px 12px 8px 32px;
-}
-
-#wikinavi
-{
-	float:left;
-	height:100%;
-	width:230px;
-}
-
-#wikinavi .date,#wikisidebar .date
-{
-	color:#888;
-	font-size:0.8em;
-}
-
-#wikinavi .memo,#wikisidebar .memo
-{
-	color:#aaa;
-	font-size:0.6em;
-}
-
-#wikinavi .navipad
-{
-	-webkit-border-radius:12px;
-	background-color:#f0f0fa;
-	border-radius:12px;
-	font-size:12px;
-	line-height:15px;
-	margin-top:8px;
-	padding:10px 6px 16px;
-}
-
-#wikinavi .new,#wikisidebar .new,#wikifooter .new
-{
-	color:red;
-	font-size:0.8em;
 }
 
 #wikinavi h1,#wikinavi h2,#wikinavi h3,#wikinavi h4,#wikinavi h5,#wikinavi h6
@@ -497,703 +82,3 @@
 	margin:12px 0 4px;
 	padding:6px;
 }
-
-#wikinavi li
-{
-	background-repeat:no-repeat;
-	margin:0 0 4px;
-	padding:0;
-}
-
-#wikinavi ul
-{
-	color:gray;
-	line-height:1.4em;
-	list-style-type:square;
-	margin:4px 4px 4px 8px;
-	padding:6px 6px 6px 8px;
-}
-
-#wikisidebar
-{
-	float:right;
-	height:100%;
-	width:170px;
-}
-
-#wikisidebar .barpad
-{
-	font-size:12px;
-	line-height:14px;
-	padding:8px;
-}
-
-#wikisidebar h1,#wikisidebar h2,#wikisidebar h3,#wikisidebar h4,#wikisidebar h5,#wikisidebar h6
-{
-	-webkit-border-raduis:10px;
-	background-color:#E0e0FF;
-	border-radius:10px;
-	font-size:1em;
-	font-weight:400;
-	margin:2px 0;
-	padding:6px 4px 6px 8px;
-}
-
-#wikisidebar li
-{
-	margin:0;
-	padding:2px 2px 4px 0;
-}
-
-#wikisidebar ul
-{
-	color:gray;
-	list-style-type:square;
-	margin:4px 0 4px 8px;
-	padding:4px 4px 4px 12px;
-}
-
-.anchor_super
-{
-	font-size:xx-small;
-	text-decoration:none;
-	vertical-align:super;
-}
-
-.block
-{
-	border:1px solid orange;
-	padding:5px;
-}
-
-.clear
-{
-	clear:both;
-}
-
-.counter
-{
-	margin:4px;
-	padding:8px;
-}
-
-.ctrl_menu
-{
-	font-size:0.7em;
-	margin:4px auto;
-	max-width:768px;
-	text-align:right;
-}
-
-.error_box {
-	background-color: #FEE;
-	padding: 1em;
-}
-
-.error,.red
-{
-	color:red;
-	font-weight:700;
-}
-
-.errormessage
-{
-	padding-left:30px;
-	padding-top:10px;
-}
-
-.filecode
-{
-	border:1px solid #eee;
-	padding:0;
-}
-
-.filename
-{
-	background-color:#fcfcfc;
-	color:#000;
-	font-size:0.8em;
-	margin:0;
-	padding:4px;
-}
-
-.header_pad,#wikicommand form,#wikieditorbody .bodypad,#wikieditortitle .titlepad
-{
-	padding:8px;
-}
-
-.mathjax
-{
-	background-color:#FFF;
-	border:solid 1px #B0C4DE;
-	color:#333;
-	font-family:monospace;
-	font-size:15px;
-	letter-spacing:0;
-	margin:4px;
-	overflow:auto;
-	padding:6px;
-}
-
-.memo
-{
-	color:navy;
-	font-size:0.8em;
-}
-
-.menublock
-{
-	background:url(img/menu-middle.gif) repeat-y top left;
-	margin:0;
-	padding:1px;
-}
-
-.menublock_bottom
-{
-	background:url(img/menu-bottom.gif) no-repeat bottom left;
-	height:8px;
-	margin:0;
-	padding:2px 0 0 10px;
-}
-
-.menublock_top
-{
-	background:url(img/menu-top.gif) no-repeat top left;
-	border-bottom:1px solid #ffb96f;
-	font-size:12px;
-	height:20px;
-	margin:0;
-	padding:6px 0 0 10px;
-}
-
-.navibar
-{
-	border-top:1px solid #c0c0cc;
-	color:#909090;
-	font-size:0.8em;
-	margin:0 auto 4px;
-	padding:3px;
-	text-align:center;
-}
-
-.navibar ul
-{
-	list-style:none;
-	padding:2px 12px;
-}
-
-.navibar ul li
-{
-	float:left;
-	padding-right:12px;
-}
-
-.pager
-{
-	background-color:#ffe;
-	font-size:0.7em;
-	margin:0;
-	padding:4px;
-}
-
-.plugin_comment
-{
-	margin:0;
-	padding:0 8px 0 1em;
-}
-
-.plugin_comment .plugin_title
-{
-	background-color: #eef;
-	padding: 8px;
-}
-
-.plugin_comment .comment_close_bar
-{
-	background-color:#eee;
-	border-left:1px solid silver;
-	border-top:1px solid silver;
-	color:#666;
-	text-align:right;
-}
-
-.plugin_comment .comment_log
-{
-	border-top: 1px dotted silver;
-	border-left:4px solid silver;
-	border-bottom: 1px solid silver;
-	margin:8px 8px 8px 2em;
-	padding:12px;
-}
-
-.plugin_comment .comment_log .comment_body
-{
-	font-size:0.8em;
-	padding:4px;
-}
-
-.plugin_comment .comment_log .comment_title
-{
-	border-bottom:1px dotted silver;
-	font-size:0.8em;
-	padding:4px;
-	color: gray;
-}
-
-.plugin_comment .memo
-{
-	color:#666;
-}
-
-.plugin_comment form
-{
-	border-bottom:1px solid silver;
-	border-left:1px solid silver;
-	padding:8px;
-}
-
-.plugin_comment .todo {
-	background-color :yellow;
-	color: black;
-	cursor: pointer;
-}
-.plugin_comment .done {
-	background-color :#efe;
-	cursor: pointer;
-}
-
-.plugin_comment .msg_post_comment {
-	text-align: left;
-}
-
-.resmark_q
-{
-	background-color:#fafaff;
-	border-left:4px solid #9040ff;
-	margin:8px 0 8px 14px;
-	padding:1em;
-	width:90%;
-}
-
-.rightopt
-{
-	font-size:0.8em;
-	text-align:right;
-}
-
-.taglist LI
-{
-	float:left;
-	margin:6px;
-	padding:0;
-}
-
-.taglist UL
-{
-	font-size:0.8em;
-	line-height:1.2em;
-	list-style-type:none;
-	margin:0;
-	padding:0;
-}
-
-.tagpagelist
-{
-	font-size:12px;
-	line-height:15px;
-}
-
-.tagpagelist .title
-{
-	background-color:#fff0f0;
-	margin-top:20px;
-	padding:8px;
-}
-
-.tagpagelist LI
-{
-	margin:6px;
-	padding:0;
-}
-
-.tagpagelist UL
-{
-	list-style-type:disc;
-	margin-left:12px;
-	padding:0;
-}
-
-.topnavipagename
-{
-	border-bottom:solid 1px #000;
-	border-top:solid 1px #000;
-	color:#000;
-	font-size:16px;
-	font-weight:700;
-	margin-bottom:20px;
-	padding:8px;
-	text-align:left;
-	width:100%;
-}
-
-.topnavipagename a
-{
-	text-decoration:none;
-}
-
-a img
-{
-	border:0;
-}
-
-body
-{
-	background-color:#FFF;
-	color:#000;
-	width:100%;
-}
-
-div.beta
-{
-	background-color:#e0e0ff;
-	border:solid 1px #B0C4DE;
-	color:#333;
-	font-family:monospace;
-	font-size:15px;
-	letter-spacing:0;
-	margin:0;
-	overflow:auto;
-	padding:4px;
-}
-
-div.code
-{
-	background-color:#f0f0ff;
-	border:solid 1px #B0C4DE;
-	color:#333;
-	font-family:monospace;
-	font-size:15px;
-	letter-spacing:0;
-	margin:0;
-	overflow:auto;
-	padding:4px;
-}
-
-div.underline
-{
-	border-bottom:solid 2px #E0e0FF;
-	margin:0 8px 8px 0;
-	width:100%;
-}
-
-hr
-{
-	margin-bottom:20px;
-	margin-top:10px;
-}
-
-li.navi_left
-{
-	display:inline;
-	float:left;
-	text-align:left;
-}
-
-li.navi_none
-{
-	display:inline;
-	float:none;
-}
-
-li.navi_right
-{
-	display:inline;
-	float:right;
-	text-align:right;
-}
-
-pre
-{
-	background-color:#fffff0;
-	border:solid 1px #B0C4DE;
-	color:#333;
-	font-size:15px;
-	margin:4px 0;
-	overflow:auto;
-	padding:4px;
-}
-
-pre.code
-{
-	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
-	letter-spacing:0;
-}
-
-pre.code .synComment
-{
-	color:#0000c0;
-}
-
-pre.code .synConstant
-{
-	color:#c00000;
-}
-
-pre.code .synIdentifier
-{
-	color:teal;
-}
-
-pre.code .synSpecial,pre.code .synPreProc
-{
-	color:#c000c0;
-}
-
-pre.code .synStatement
-{
-	color:#804000;
-}
-
-pre.code .synType
-{
-	color:green;
-}
-
-pre.code span.attr
-{
-	color:#000;
-}
-
-pre.code span.rem
-{
-	color:#909;
-}
-
-pre.code span.str,pre.code span.num
-{
-	color:#090;
-}
-
-pre.code span.value
-{
-	color:#900;
-}
-
-span.konawiki3copyright a
-{
-	color:#9AB;
-	font-size:0.6em;
-	text-decoration:none;
-}
-
-strong.strong1
-{
-	background-color:#FF0;
-	font-weight:700;
-	text-decoration:underline;
-}
-
-strong.strong2
-{
-	background-color:aqua;
-	font-weight:700;
-	text-decoration:underline;
-}
-
-ul.topnavi
-{
-	background-color:#fffefe;
-	color:#000;
-	font-size:10px;
-	margin:0;
-	padding:0;
-	text-align:center;
-}
-
-ul.topnavi a
-{
-	color:#88f;
-	text-decoration:none;
-}
-
-.counter
-{
-  font-size: 0.9em;
-}
-.coutner_month
-{
-  font-size: 0.8em;
-  color: gray;
-}
-
-.popular_info
-{
-  font-size: 0.8em;
-  color: gray;
-}
-
-.allpage_footer
-{
-  border-top: 1px dotted silver;
-  padding: 10px;
-  margin-top: 1.5em;
-}
-
-#wikicommand
-{
-	font-size:0.8em;
-	margin:auto;
-	width:1000px;
-}
-
-#wikicommand h6
-{
-	border-bottom:solid 1px #e0e0e0;
-	border-top:solid 3px #a0a0a0;
-	font-size:1em;
-	margin-bottom:8px;
-	margin-top:24px;
-	padding:8px;
-}
-
-#wikieditor
-{
-	font-size:1em;
-	line-height:1.3em;
-	text-align:left;
-}
-
-#wikieditor .editorpad
-{
-	padding:8px;
-	text-align:left;
-}
-
-#wikieditorbody .date
-{
-	font-size:10px;
-}
-
-#wikieditorbody .desc
-{
-	color:#339;
-	font-size:12px;
-	margin:0;
-	padding:4px;
-}
-
-#wikieditorbody .difftext
-{
-	background-color:#e0e0e0;
-	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
-	font-size:14px;
-	line-height:16px;
-	margin:0 0 12px;
-	padding:8px;
-}
-
-#wikieditorbody .error
-{
-	color:red;
-	font-size:14px;
-	padding:8px;
-}
-
-#wikieditorbody .maintext
-{
-	background-color:#f6f6ff;
-	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
-	font-size:14px;
-	line-height:17px;
-	margin:0 0 12px;
-	padding:8px;
-}
-
-#wikieditortitle
-{
-	background-color:#f0f0ff;
-	float:left;
-	font-size:12px;
-	height:100%;
-	line-height:20px;
-	width:19%;
-}
-
-#wikieditortitle ul
-{
-	font-size:10px;
-	line-height:12px;
-	list-style-type:none;
-}
-
-#wikifooter
-{
-	border-top:solid 1px #E0e0FF;
-	margin:0 auto;
-	max-width:768px;
-	padding:12px;
-	text-align:center;
-}
-
-#wikifooter .footer_menu
-{
-	font-size:0.6em;
-	padding:12px;
-	text-align:right;
-}
-
-#wikifooter .footer_menu > span
-{
-	background-color:#f0f0f0;
-	padding:12px;
-}
-
-#wikifooter .info > a
-{
-	color:gray;
-	font-size:0.6em;
-	text-decoration:none;
-}
-
-#wikifooter .menu
-{
-	font-size:1em;
-	margin-bottom:4px;
-	padding:3px;
-	text-align:right;
-}
-
-#wikifooter .pageinfo
-{
-	text-align:right;
-}
-
-#wikifooter > div.info
-{
-	margin-top:12px;
-	padding:24px;
-}
-
-#wikifooter UL
-{
-	list-style:none;
-	text-align:right;
-}
-
-.column
-{
-	margin: 1em;
-	padding: 1em 1em 1em 1em;
-	background-color: #f6f6ff;
-	border-right: 1px solid silver;
-	border-bottom: 2px solid silver;
-}
-
-.mojisu {
-	margin:0;
-	padding:4px;
-	font-size: 0.8em;
-	color: gray;
-	text-align: right;
-}
-
