編集ボタンをページ先頭に配置、recentプラグインにタイトルを表示

--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -17,8 +17,9 @@
   height: 300px;
 }
 
-#wikiedit input#git_save_btn,
-#wikiedit input#temporarily_save_btn {
+
+#wikiedit input[type="submit"],
+#wikiedit input[type="button"] {
   font-size: 0.9em;
   border: 1px solid gray;
   color: black;
@@ -27,18 +28,10 @@
   text-decoration: none;
 }
 
-#wikiedit input[type="submit"]#save_btn {
-  font-size: 0.9em;
-  border: 1px solid gray;
-  color: black;
-  padding: 8px;
-  background-color: #f0f0f0;
-  text-decoration: none; 
-}
-
 #wikiedit .button-short {
   width: 10em;
 }
+
 #wikiedit .button-long {
   width: 16em;
 }
