--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -25,6 +25,11 @@
           class="pure-button button-short" 
           value="{{'Save to Repo'|lang}}">
         {{ endif }}
+        <input id="new_btn"
+          type="button"
+          class="pure-button button-short"
+          value="{{'New' | lang}}"
+          onclick="jump('{{ $new_btn_url }}')">
       </div>
       <div>
         <input type="text" id="edit_info" class="info" readonly>
