--- a/kona3engine/template/show.html
+++ b/kona3engine/template/show.html
@@ -5,14 +5,14 @@
   
     <div class="pure-u-1 pure-u-md-19-24 page_body">
       <div id="kona3_main">
-        {{ if $show_data_dir != '' }}
-          <div class="mojisu" style="float:right">{{ $cnt_txt }}字</div>
-        {{ endif }}
-        {{ if $edit_link != ''}}
         <div class="kona3_login_bar">
-          <a class="pure-button" href="{{ $edit_link }}">{{ "Edit" | lang }}</a>
+          {{ if $edit_link != ''}}
+          <div class="login_bar1"><a href="{{ $edit_link }}">{{ "Edit" | lang }}</a></div>
+          {{ endif }}
+          {{ if $show_data_dir != '' }}
+          <div class="login_bar2 mojisu">{{ $cnt_txt }}字</div>
+          {{ endif }}
         </div><!-- kona3_login_bar -->
-        {{ endif }}
         {{$page_body | safe}}
       </div><!-- #kona3_main -->
     </div><!-- end of .page_body -->
