編集画面で保存時の一時保存の情報を簡略化

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -32,8 +32,8 @@
           onclick="jump('{{ $new_btn_url }}')">
       </div>
       <div class="info_box">
-        <div><input type="text" id="edit_info" class="info" readonly></div>
-        <div><input type="text" id="edit_counter" class="info" readonly></div>
+        <span id="edit_counter" class="info"></span>
+        <span id="edit_info" class="info"></span>
       </div><!-- end of info_box -->
       <div class="desc">
         <input type="checkbox" id="autosave" class="info" style="width:2em;" name="autosave" value="yes" checked>
