編集画面から、押し間違えそうな「新規」を除去

--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -13,8 +13,8 @@
   padding: 1%;
   font-size: 1em;
   line-height: 1.7em;
-  width: 98%;
-  height: 300px;
+  width: calc(100%);
+  height: calc(60vh);
 }
 
 
