--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -37,8 +37,12 @@
         <button onclick="helpOnClick()">?</button>
       </div>
       <div id="help_div" class="block2" style="display: none;">
-        <div>Shortcut:</div>
         <div>
+          <h3>Help:</h3>
+          <ul>
+            <li><a href="https://kujirahand.com/konawiki3/index.php?Kona3%E8%A8%98%E6%B3%95" target="_new">{{'How to write KonaWiki' | lang}}</a></li>
+          </ul>
+          <h3>Shortcut:</h3>
           <ul>
             <li>Ctrl+S ... save</li>
           </ul>
