--- a/kona3engine/template/parts_header.html
+++ b/kona3engine/template/parts_header.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+{{ if kona3isLogin() }}
 <!-- konawiki version -->
 <meta name="konawiki::version" contents="{{ $KONAWIKI_VERSION }}">
+{{ endif }}
 {{ if $wiki_private }}
 <meta name="konawiki::private" contents="yes">
 {{ endif }}
-
 <!-- include files -->
 {{ $head_tags | safe }}
 {{ $js_tags | safe }}
