設定ファイルのデータを暗号化するように修正

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -129,6 +129,9 @@
   <input type='text' name='max_search' value='{{$max_search}}'><br>
   max_search_level:<br>
   <input type='text' name='max_search_level' value='{{$max_search_level}}'><br>
+
+  openai_apikey(for CharGPT):<br>
+  <input type='text' name='openai_apikey' value='{{$openai_apikey}}'><br>
   
   <br>
   <input type='hidden' name='edit_token' value='{{$edit_token}}'>
