ChatGPTに問い合わせる機能を追加 #72

--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -8,7 +8,7 @@
   max-width:700px;
 }
 
-#wikiedit textarea {
+textarea#edit_txt {
   margin: 0px;
   padding: 1%;
   font-size: 1em;
@@ -108,4 +108,13 @@
 .buttons {
   display: flex;
   justify-content: space-between;
+}
+
+textarea#ai_input_text {
+  width: calc(100% - 12px);
+  height: 6em;
+  margin-top: 8px;
+  padding: 1%;
+  font-size: 0.9em;
+  line-height: 1.3em;
 }
