AIのAPIキーを環境変数から取得できるように修正した

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -130,7 +130,7 @@
   max_search_level:<br>
   <input type='text' name='max_search_level' value='{{$max_search_level}}'><br>
 
-  openai_apikey(for CharGPT):<br>
+  openai_apikey(for CharGPT)[<a href="https://kujirahand.com/konawiki3/index.php?AI" target="_new">help</a>]:<br>
   <input type='text' name='openai_apikey' value='{{$openai_apikey}}'><br>
   
   <br>
