add AI assistant

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -78,6 +78,7 @@
       </div><!-- end of #history_div -->
       {{ if $ai_enabled }}
       <div id="ai_div" class="block2">
+        <div><select id="ai_template_select"></select><button id="ai_template_insert_btn">{{'Insert' | lang}}</button></div>
         <div id="ai_input">
           <textarea id="ai_input_text"></textarea>
         </div>
