--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -118,3 +118,11 @@ textarea#ai_input_text {
   font-size: 0.9em;
   line-height: 1.3em;
 }
+
+.ai_block {
+  margin: 0.3em;
+  padding: 0.3em;
+  background-color: #f0f0f0;
+  color: black;
+  border: 1px solid gray;
+}
