AI選択ボックスの修正 #72

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -44,7 +44,7 @@
           <h3>Help:</h3>
           <ul>
             <li><a href="https://kujirahand.com/konawiki3/index.php?Kona3%E8%A8%98%E6%B3%95" target="_new">{{'How to write KonaWiki' | lang}}</a></li>
-            <li><a href="https://kujirahand.com/konawiki3/index.php?AI">{{'How to enabled AI'|lang}}</a></li>
+            <li><a href="https://kujirahand.com/konawiki3/index.php?AI" target="_new">{{'How to enabled AI'|lang}}</a></li>
           </ul>
           <h3>Shortcut:</h3>
           <ul>
@@ -78,7 +78,7 @@
       </div><!-- end of #history_div -->
       {{ if $ai_enabled }}
       <div id="ai_div" class="block2">
-        <div><select id="ai_template_select"></select><button id="ai_template_insert_btn">{{'Insert' | lang}}</button></div>
+        <div><select id="ai_template_select"><option>アクションを選択</option></select></div>
         <div id="ai_input">
           <textarea id="ai_input_text"></textarea>
         </div>
